# rc-club-members-2

./: .dockerignore  .gitignore  Dockerfile  ama.py  build_ecr.sh  manage.py  pyproject.toml
members_base/: admin.py  apps.py  authentication.py  context_processors.py  forms.py  models.py  urls.py  views.py
members_base/management/commands/: import_previous_gen.py
members_base/migrations/: 0001_initial.py
members_base/static/members_base/: base.js  nav.js
members_base/templates/members_base/: base.html  email_default_body.md  index.html  member_detail.html  member_list.html  send_email_confirm.html  send_email_prepare.html
rc_club_members/: asgi.py  settings.py  urls.py  wsgi.py
