[project]
name = "rc-club-members-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "django>=5.1.6",
    "mistletoe>=1.4.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
